Break the body again to see if it fixes things

--- a/custom.css
+++ b/custom.css
@@ -40,7 +40,7 @@
 }
 
 
-.body {
+body {
     display: flex;
     flex-direction: column;
     justify-content: center;
